--- a/research/01.ipynb
+++ b/research/01.ipynb
@@ -1,22 +1,66 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "aed9f8bb",
+   "metadata": {},
+   "source": [
+    "## Data Ingestion "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d8618088",
+   "execution_count": 2,
+   "id": "365ebaae",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import namedtuple\n",
     "import os "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "365ebaae",
+   "execution_count": 3,
+   "id": "fc44262f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "DataIngestionConfig = namedtuple(\"DataIngestionConfig\",[\n",
+    "    \"root_dir\",\n",
+    "    \"source_url\",\n",
+    "    \"local_data_file\",\n",
+    "    \"unzip_dir\"\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "59ab3529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from pathlib import Path\n",
+    "\n",
+    "@dataclass(frozen=True)\n",
+    "class DataIngestionConfig:\n",
+    "    root_dir: Path\n",
+    "    source_url: str\n",
+    "    local_data_file: Path\n",
+    "    unzip_dir: Path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33552f3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from CNN.constants import *"
+   ]
   }
  ],
  "metadata": {
