--- a/research/01.ipynb
+++ b/research/01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "id": "365ebaae",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
+   "id": "101f0f6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"C:\\\\Users\\\\abhis\\\\OneDrive\\\\Desktop\\\\End_to_End_DL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "36f369ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\abhis\\\\OneDrive\\\\Desktop\\\\End_to_End_DL'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "id": "fc44262f",
    "metadata": {},
    "outputs": [],
@@ -36,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "id": "59ab3529",
    "metadata": {},
    "outputs": [],
@@ -54,13 +85,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "33552f3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CNN.constants import *"
+    "from CNN.constants import *\n",
+    "from CNN.utils import read_yaml, create_directories"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "93d06c1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        config_filepath = CONFIG_FILE_PATH,\n",
+    "        params_filepath = PARAMA_FILE_PATH):\n",
+    "\n",
+    "        self.config  = read_yaml(config_filepath)\n",
+    "        self.paramas = read_yaml(params_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "\n",
+    "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
+    "        config = self.config.data_ingestion\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        data_ingestion_config = DataIngestionConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            source_url=config.source_url,\n",
+    "            local_data_file= config.al_data_file,\n",
+    "            unzip_dir=config.unzip_dir\n",
+    "        )\n",
+    "\n",
+    "        return data_ingestion_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "250826fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "import urllib.request as request \n",
+    "from zipfile import ZipFile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "ced29824",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataIngestion:\n",
+    "    def __init__(self, config: DataIngestionConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    \n",
+    "    def download_file(self):\n",
+    "        if not os.path.exists(self.config.local_data_file):\n",
+    "            filename, headers = request.urlretrieve(\n",
+    "                url = self.config.source_URL,\n",
+    "                filename = self.config.local_data_file\n",
+    "            )\n",
+    "\n",
+    "    \n",
+    "    def _get_updated_list_of_files(self, list_of_files):\n",
+    "        return [f for f in list_of_files if f.endswith(\".jpg\") and (\"Cat\" in f or \"Dog\" in f)]\n",
+    "    \n",
+    "    \n",
+    "    def _preprocess(self, zf: ZipFile, f: str, working_dir: str):\n",
+    "        target_filepath = os.path.join(working_dir, f)\n",
+    "        if not os.path.exists(target_filepath):\n",
+    "            zf.extract(f, working_dir)\n",
+    "        \n",
+    "        if os.path.getsize(target_filepath) == 0:\n",
+    "            os.remove(target_filepath)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    def unzip_and_clean(self):\n",
+    "        with ZipFile(file=self.config.local_data_file, mode=\"r\") as zf:\n",
+    "            list_of_files = zf.namelist()\n",
+    "            updated_list_of_files = self._get_updated_list_of_files(list_of_files)\n",
+    "            for f in updated_list_of_files:\n",
+    "                self._preprocess(zf, f, self.config.unzip_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "b40ac6ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-04-10 16:40:55,438: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-04-10 16:40:55,455: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-04-10 16:40:55,462: INFO: common: created directory at: artifacts]\n",
+      "[2025-04-10 16:40:55,465: INFO: common: created directory at: artifacts/data_ingestion\\]\n"
+     ]
+    },
+    {
+     "ename": "BoxKeyError",
+     "evalue": "\"'ConfigBox' object has no attribute 'al_data_file'\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\abhis\\AppData\\Local\\anaconda3\\envs\\brest\\lib\\site-packages\\box\\box.py:503\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'al_data_file'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\abhis\\AppData\\Local\\anaconda3\\envs\\brest\\lib\\site-packages\\box\\box.py:536\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\abhis\\AppData\\Local\\anaconda3\\envs\\brest\\lib\\site-packages\\box\\box.py:524\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mBoxKeyError\u001b[0m: \"'al_data_file'\"",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\abhis\\AppData\\Local\\anaconda3\\envs\\brest\\lib\\site-packages\\box\\box.py:538\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ConfigBox' object has no attribute 'al_data_file'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\abhis\\AppData\\Local\\anaconda3\\envs\\brest\\lib\\site-packages\\box\\config_box.py:28\u001b[0m, in \u001b[0;36mbox.config_box.ConfigBox.__getattr__\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\abhis\\AppData\\Local\\anaconda3\\envs\\brest\\lib\\site-packages\\box\\box.py:552\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mBoxKeyError\u001b[0m: \"'ConfigBox' object has no attribute 'al_data_file'\"",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\abhis\\AppData\\Local\\anaconda3\\envs\\brest\\lib\\site-packages\\box\\box.py:503\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'al_data_file'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\abhis\\AppData\\Local\\anaconda3\\envs\\brest\\lib\\site-packages\\box\\box.py:536\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\abhis\\AppData\\Local\\anaconda3\\envs\\brest\\lib\\site-packages\\box\\box.py:524\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mBoxKeyError\u001b[0m: \"'al_data_file'\"",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\abhis\\AppData\\Local\\anaconda3\\envs\\brest\\lib\\site-packages\\box\\box.py:538\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ConfigBox' object has no attribute 'al_data_file'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[65], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39munzip_and_clean()\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
+      "Cell \u001b[1;32mIn[65], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m     config \u001b[38;5;241m=\u001b[39m ConfigurationManager()\n\u001b[1;32m----> 3\u001b[0m     data_ingestion_config \u001b[38;5;241m=\u001b[39m \u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_data_ingestion_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m     data_ingestion \u001b[38;5;241m=\u001b[39m DataIngestion(config\u001b[38;5;241m=\u001b[39mdata_ingestion_config)\n\u001b[0;32m      5\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mdownload_file()\n",
+      "Cell \u001b[1;32mIn[62], line 20\u001b[0m, in \u001b[0;36mConfigurationManager.get_data_ingestion_config\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     14\u001b[0m config \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mdata_ingestion\n\u001b[0;32m     15\u001b[0m create_directories([config\u001b[38;5;241m.\u001b[39mroot_dir])\n\u001b[0;32m     17\u001b[0m data_ingestion_config \u001b[38;5;241m=\u001b[39m DataIngestionConfig(\n\u001b[0;32m     18\u001b[0m     root_dir\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mroot_dir,\n\u001b[0;32m     19\u001b[0m     source_url\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39msource_url,\n\u001b[1;32m---> 20\u001b[0m     local_data_file\u001b[38;5;241m=\u001b[39m \u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mal_data_file\u001b[49m,\n\u001b[0;32m     21\u001b[0m     unzip_dir\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39munzip_dir\n\u001b[0;32m     22\u001b[0m )\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m data_ingestion_config\n",
+      "File \u001b[1;32mc:\\Users\\abhis\\AppData\\Local\\anaconda3\\envs\\brest\\lib\\site-packages\\box\\config_box.py:30\u001b[0m, in \u001b[0;36mbox.config_box.ConfigBox.__getattr__\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\abhis\\AppData\\Local\\anaconda3\\envs\\brest\\lib\\site-packages\\box\\box.py:552\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mBoxKeyError\u001b[0m: \"'ConfigBox' object has no attribute 'al_data_file'\""
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_ingestion_config = config.get_data_ingestion_config()\n",
+    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.download_file()\n",
+    "    data_ingestion.unzip_and_clean()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de3d13da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
